@@ -9,3 +9,4 @@
 2023-11-22 giku created a new xplogger
 2023-11-23 giku added all monsters in siridfaath into the xplogger
 2023-11-24 giku added all monsters in bloodwood into xplogger
+2023-11-25 added toplist at the area entrance, fixed the puzzle list display
